<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>PadelTournamentManager</artifactId>

  <build>
    <plugins>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>repackage</goal>
            </goals>
          </execution>
        </executions>
        <groupId>org.springframework.boot</groupId>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>${argLine}</argLine>
          <useModulePath>false</useModulePath>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.2.5</version>
      </plugin>
      <plugin>
        <artifactId>jacoco-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <goals>
              <goal>report</goal>
            </goals>
            <id>report</id>
            <phase>test</phase>
          </execution>
        </executions>
        <groupId>org.jacoco</groupId>
        <version>0.8.12</version>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
              <version>1.18.38</version>
            </path>
            <path>
              <artifactId>lombok-mapstruct-binding</artifactId>
              <groupId>org.projectlombok</groupId>
              <version>0.2.0</version>
            </path>
            <path>
              <artifactId>mapstruct-processor</artifactId>
              <groupId>org.mapstruct</groupId>
              <version>1.6.2</version>
            </path>
          </annotationProcessorPaths>
          <compilerArgs>
            <arg>-parameters</arg>
            <arg>-Amapstruct.defaultComponentModel=spring</arg>
          </compilerArgs>
          <release>21</release>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.11.0</version>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>provided</scope>
      <version>1.18.38</version>
    </dependency>

    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
      <version>3.5.3</version>
    </dependency>

    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
      <version>3.5.3</version>
    </dependency>

    <dependency>
      <artifactId>h2</artifactId>
      <groupId>com.h2database</groupId>
      <version>2.3.232</version>
    </dependency>

    <dependency>
      <artifactId>junit-jupiter</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
      <version>5.10.2</version>
    </dependency>
    <dependency>
      <artifactId>spring-security-test</artifactId>
      <groupId>org.springframework.security</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>mockito-core</artifactId>
      <groupId>org.mockito</groupId>
      <scope>test</scope>
      <version>5.11.0</version>
    </dependency>

    <dependency>
      <artifactId>mockito-junit-jupiter</artifactId>
      <groupId>org.mockito</groupId>
      <scope>test</scope>
      <version>5.11.0</version>
    </dependency>

    <dependency>
      <artifactId>spring-boot-starter-validation</artifactId>
      <groupId>org.springframework.boot</groupId>
      <version>3.5.3</version>
    </dependency>

    <dependency>
      <artifactId>spring-boot-starter-security</artifactId>
      <groupId>org.springframework.boot</groupId>
      <version>3.5.4</version>
    </dependency>

    <dependency>
      <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
      <groupId>org.springframework.boot</groupId>
      <version>3.5.4</version>
    </dependency>

    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.postgresql</groupId>
      <version>42.7.3</version>
    </dependency>

    <dependency>
      <artifactId>postgres-socket-factory</artifactId>
      <groupId>com.google.cloud.sql</groupId>
      <version>1.17.1</version>
    </dependency>
    <dependency>
      <artifactId>flyway-core</artifactId>
      <groupId>org.flywaydb</groupId>
      <version>11.11.1</version>
    </dependency>
    <dependency>
      <artifactId>flyway-database-postgresql</artifactId>
      <groupId>org.flywaydb</groupId>
      <version>11.11.1</version>
    </dependency>

    <dependency>
      <artifactId>mapstruct</artifactId>
      <groupId>org.mapstruct</groupId>
      <version>1.6.2</version>
    </dependency>
    <dependency>
      <artifactId>mapstruct-processor</artifactId>
      <groupId>org.mapstruct</groupId>
      <scope>provided</scope>
      <version>1.6.2</version>
    </dependency>

  </dependencies>
  <groupId>io.github.redouanebali</groupId>
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>3.5.4</version>
  </parent>


  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <sonar.organization>redouanebali</sonar.organization>
  </properties>

  <version>1.0-SNAPSHOT</version>

</project>
